Improve command system and fix logging webhook